--- a/ProductLabTask/ProductLabTask/Views/Admin/Login.cshtml
+++ b/ProductLabTask/ProductLabTask/Views/Admin/Login.cshtml
@@ -5,7 +5,7 @@
 
 <h2>Login</h2>
 
-<form action="/customer/login" method="post">
+<form action="/admin/login" method="post">
     <input type="text" name="email" placeholder="Email" class="form-control" />
     <br />
     <input type="password" name="password" placeholder="Password" class="form-control"/>
